--- a/src/index.css
+++ b/src/index.css
@@ -15,13 +15,16 @@ code {
 hr {
   border: 2px solid blue;
   opacity: 1;
-  width: 30%;
-  margin: auto;
 }
 
 h1 {
   text-align: center;
 }
-p {
-  text-align: center
+
+#pagetitle hr{
+  margin: auto;
+  width: 30%;
+}
+#pagetitle p {
+  text-align: center;
 }
