--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,16 @@ main {
 .icontitle{
   margin: 30px 0px;
 }
+
+#headerhp {
+  background-image: url(/src/assets/images/hero-bg.jpg);
+  text-align: center;
+  padding: 100px 0px;
+}
+
+#headerhp h1 {
+  color: white;
+}
+#headerhp p {
+  color: white;
+}
