--- a/src/index.css
+++ b/src/index.css
@@ -30,9 +30,10 @@ h1 {
 }
 
 .container {
-  width: 80%;
-  padding: 30px;
-  margin: auto;
+max-width: 1200px;
+width: 90%;
+padding: 30px;
+margin: auto;
 }
 
 main {
@@ -51,6 +52,7 @@ main {
 
 #headerhp {
   background-image: url(/src/assets/images/hero-bg.jpg);
+  background-size: 100% auto;
   text-align: center;
   padding: 100px 0px;
 }
@@ -60,4 +62,18 @@ main {
 }
 #headerhp p {
   color: white;
+}
+
+nav{
+  color: white;
+}
+
+nav a {
+  text-decoration: none;
+  color: white;
+}
+
+.nav-link {
+ text-decoration: none;
+ color: white;
 }
