--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Nunito Sans', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -19,6 +19,9 @@ code {
 
 h1 {
   text-align: center;
+}
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 600;
 }
 
 #pagetitle hr{
@@ -54,6 +57,7 @@ main {
   background-size: 100% auto;
   text-align: center;
   padding: 100px 0px;
+  color: white;
 }
 
 #headerhp h1 {
@@ -75,4 +79,27 @@ nav a {
 .nav-link {
  text-decoration: none;
  color: white;
+}
+.nav-link:hover {
+  font-weight: 800;
+  color: white;
+}
+.card {
+  min-height: 340px;
+}
+.card:hover {
+  background-color: #efefef;
+  box-shadow: 5px 5px 1px .5px rgb(0 0 0 / 0.1);
+}
+.card-body .btn:hover {
+  background-color: #528be0;
+  border-color: #528be0;
+}
+
+.social:hover {
+  color: white;
+}
+.menu:focus {
+  font-weight: 800;
+  color: white;
 }
